# silver-spork

./: .gitignore  PKG-INFO  README.md  pyproject.toml
src/slith/: __main__.py  config.py  mythril.py  parse_good.py  pragma_solidity.py  slither.py  solc_select.py  util.py
temp/: test_pragma_solidity.py
tests/: test___main__.py  test_config.py  test_parse_good.py  test_pragma_solidity.py  test_slither.py  test_solc_select.py  ttost_config (1).py
